Fixed the display problems on desktop version. Remaining problem on mobile and desktop version: image display in activities part.

--- a/assets/css/desktop-style.css
+++ b/assets/css/desktop-style.css
@@ -2,7 +2,6 @@
 
 header #logo {
     height: 48px;
-    padding-top: 70px;
 }
 
 header nav {
@@ -116,16 +115,11 @@ header nav ul li:hover {
 
 /* DIV ACCOMODATIONS IN CITY */
 
-.accomodations_in_city {
-    height: 626px;
-}
-
 
 /* ACCOMODATIONS SECTION */
 
 .accomodations_section {
     border-radius: 15px;
-    height: 626px;
     width: 66%;
     background-color: #F2F2F2;
 }
@@ -160,16 +154,13 @@ header nav ul li:hover {
     border-radius: 15px;
     align-content: center;
     margin-left: 40px;
-    padding-top: 40px;
+    padding-top: 4%;
 }
 
 .most_popular_title {
     font-size: 0.85rem;
-    padding-left: 11%;
-    justify-content: ;
+    padding-left: 9%;
 }
-
-.popular_picture figcaption {}
 
 .popular_room_info {
     height: 58px;
@@ -182,79 +173,10 @@ header nav ul li:hover {
 }
 
 
-/* ACTIVITIES SECTION */
-
-.columns-width {
-    width: 302px;
-}
-
-.activities_section {
-    height: 614px;
-}
-
-.activities_section h2 {
-    margin-left: 6%;
-}
-
-.activities_in_city {}
-
-.first_activity img,
-.fourth_activity img {
-    height: 390px;
-}
-
-.second_activity img {
-    height: 180px;
-}
-
-.third_activity img {
-    height: 108px;
-}
-
-.fifth_activity img {
-    height: 140px;
-}
-
-.sixth_activity img {
-    height: 152px;
-    object-fit: ;
-}
-
-.first_activity-height,
-.fourth_activity-height {
-    height: 446px;
-}
-
-.second_activity-height {
-    height: 236px;
-}
-
-.third_activity-height {
-    height: 164px;
-}
-
-.fifth_activity-height {
-    height: 196px;
-}
-
-.sixth_activity-height {
-    height: 210px;
-}
-
-.activities_name {
-    padding-left: 5.3%;
-    height: 56px;
-    border: 1px solid #F2F2F2;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    ;
-}
-
-
 /* FOOTER */
 
 footer {
-    height: 218px;
+    padding-bottom: 50px;
 }
 
 footer nav {
